# SHADER-EXPERIMENT

./: index.html
native/: Cargo.toml
native/src/: analysis.rs  app.rs  audio.rs  bake.rs  main.rs  palettes.rs  params.rs  renderer.rs  ui.rs
native/src/shaders/: clouds.wgsl  composite.wgsl  cube.wgsl  hud_embed.wgsl  post.wgsl
presets/: club-pulse.json  deep-space.json  dream.json  glitch.json  inferno.json  protean-original.json
src/: audio.js  main.js  params.js  renderer.js  ui.js
src/shaders/: composite.frag  fullscreen.vert  scene.frag
