[package]
name = "shader-experiment-native"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "22.1"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
